--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
     "express": "^4.18.1",
-    "glob": "^8.0.3"
+    "glob": "^8.0.3",
+    "iterare": "^1.2.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
