--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
   "dependencies": {
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
+    "cron": "^2.1.0",
     "express": "^4.18.1",
     "glob": "^8.0.3",
     "iterare": "^1.2.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
+    "@types/cron": "^2.0.0",
     "@types/express": "^4.17.13",
     "@types/glob": "^7.2.0",
     "@types/jest": "^28.1.6",
