Add tests for scheduler registry

--- a/jest.config.json
+++ b/jest.config.json
@@ -1,12 +1,15 @@
 {
   "moduleFileExtensions": ["js", "json", "ts"],
   "testRegex": "(.|-)test\\.(js|ts)$",
-  "rootDir": "src",
+  "rootDir": ".",
   "verbose": true,
   "transform": {
     "^.+\\.(t|j)s$": "ts-jest"
   },
   "collectCoverageFrom": ["**/*.(t|j)s"],
   "coverageDirectory": "../coverage",
+  "coveragePathIgnorePatterns": ["/node_modules/"],
+  "testPathIgnorePatterns": ["/node_modules/", "/dist/"],
+  "modulePathIgnorePatterns": ["<rootDir>/dist/"],
   "testEnvironment": "node"
 }
