--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "cron": "^2.1.0",
     "express": "^4.18.1",
     "glob": "^8.0.3",
-    "iterare": "^1.2.1"
+    "iterare": "^1.2.1",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
@@ -37,6 +38,7 @@
     "@types/glob": "^7.2.0",
     "@types/jest": "^28.1.6",
     "@types/node": "^18.6.3",
+    "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.31.0",
     "@typescript-eslint/parser": "^5.31.0",
     "eslint": "^8.21.0",
