--- a/jest.config.json
+++ b/jest.config.json
@@ -7,8 +7,8 @@
     "^.+\\.(t|j)s$": "ts-jest"
   },
   "collectCoverageFrom": ["**/*.(t|j)s"],
-  "coverageDirectory": "../coverage",
-  "coveragePathIgnorePatterns": ["/node_modules/"],
+  "coverageDirectory": "./coverage",
+  "coveragePathIgnorePatterns": ["/node_modules/", "<rootDir>/lib/testing"],
   "testPathIgnorePatterns": ["/node_modules/", "/dist/"],
   "modulePathIgnorePatterns": ["<rootDir>/dist/"],
   "testEnvironment": "node"
