--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express": "^4.18.1",
     "glob": "^8.0.3",
     "iterare": "^1.2.1",
+    "jsonwebtoken": "^8.5.1",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
@@ -37,6 +38,7 @@
     "@types/express": "^4.17.13",
     "@types/glob": "^7.2.0",
     "@types/jest": "^28.1.6",
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/node": "^18.6.3",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.31.0",
