--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "test:e2e": "echo 'No e2e tests implemented yet.'"
   },
   "dependencies": {
+    "better-sqlite3": "^7.6.2",
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
     "cron": "^2.1.0",
@@ -33,6 +34,7 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@types/better-sqlite3": "^7.6.0",
     "@types/cors": "^2.8.12",
     "@types/cron": "^2.0.0",
     "@types/express": "^4.17.13",
